# lojix-store

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  flake.nix
.beads/: config.yaml  metadata.json
src/: bundle.rs  error.rs  hash.rs  index.rs  layout.rs  lib.rs  main.rs  reader.rs  store.rs  writer.rs
