[package]
name = "lojix-store"
version = "0.1.0"
edition = "2024"
description = "lojix-store — content-addressed filesystem (nix-store analogue; holds real unix files addressed by blake3)"

# Skeleton-as-design. Types and traits are pinned; bodies are
# todo!(). See AGENTS.md.

[dependencies]
blake3 = "1"
thiserror = "2"

[lints.rust]
unused = "allow"          # tolerate skeleton todo!()s
dead_code = "allow"
